package com.mentimeter.entity;

public enum PollType {
    MCQ,
    RATING,
    WORDCLOUD
}
